# SpeakFlow

./: .gitignore  README.md  SpeakFlow.spec  app_main.py  pyproject.toml
launchd/: com.speakflow.desktop.app.plist.template  com.speakflow.desktop.plist.template
packaging/: Info.plist
scripts/: build_app.sh  build_dmg.sh  build_swift_app.sh  build_swift_dmg.sh  dev_run.sh  install_launch_agent.sh  notarize_swift_dmg.sh  uninstall_launch_agent.sh
src/whisper_flow/: audio.py  autostart.py  cleanup.py  config.py  content_store.py  history.py  hotkey.py  insert.py  language.py  main.py  permissions.py  secret_store.py  single_instance.py  stt.py  system_audio.py  time_utils.py
src/whisper_flow/ui/: __init__.py  components.py  controller.py  floating_indicator.py  theme.py
src/whisper_flow/ui/pages/: __init__.py  crud.py  history.py  home.py  permissions.py  settings.py
swift/SpeakFlow/: Package.swift  project.yml
swift/SpeakFlow/Config/: SpeakFlow-Info.plist
swift/SpeakFlow/Sources/AppLayer/: AppDelegate.swift  AppRuntime.swift  StatusBarController.swift
swift/SpeakFlow/Sources/Domain/: Models.swift  Protocols.swift  SpeakFlowError.swift  (+1 more)
swift/SpeakFlow/SpeakFlow.xcodeproj/: project.pbxproj
tests/: test_audio.py  test_autostart.py  test_cleanup.py  test_config.py  test_content_store.py  test_history.py  test_hotkey.py  test_insert.py  test_language.py  test_main.py  test_permissions.py  test_secret_store.py  test_single_instance.py  test_stt.py  test_system_audio.py  test_time_utils.py  test_ui_controller.py  test_ui_datasource.py  test_ui_layout.py
(+29 files in other folders)
